# yolobox

./: .gitignore  AGENTS.md  Cargo.toml  README.md  manual-install.md
docs/: host-artifact-opening.md
scripts/: bootstrap-vm.sh  setup.sh
src/: app.rs  cloud_init.rs  git.rs  host_bridge.rs  main.rs  network.rs  ports.rs  runtime.rs  state.rs
