[package]
name = "yolobox"
version = "0.3.0"
edition = "2024"
description = "Branch-scoped Linux VMs for local development on macOS"
license = "MIT"
repository = "https://github.com/jvanderberg/yolobox"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
libc = "0.2"
petname = "2"
ratatui = "0.29"
